--- a/LaybackKicks/package.json
+++ b/LaybackKicks/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "html-pdf": "^3.0.1",
+    "nodemailer": "^6.9.15",
     "pg": "^8.12.0",
     "request": "^2.88.2"
   }
